--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.17",
+    "@mui/material": "^5.12.1",
+    "@mui/x-date-pickers": "^6.2.1",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "date-fns": "^2.29.3",
+    "json-2-csv": "^4.0.0",
+    "mui": "^0.0.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "simplebar-react": "^3.2.4",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
