--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-mui-multi-select": "^0.1.1",
     "simplebar-react": "^3.2.4",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
