--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.17",
     "@mui/material": "^5.12.1",
     "@mui/x-date-pickers": "^6.2.1",
@@ -32,5 +30,8 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1"
   }
 }
