--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "json-2-csv": "^4.0.0",
+    "material-ui-phone-number": "^3.0.0",
     "mui": "^0.0.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
